--- a/code/plzsang2/templates/404.html
+++ b/code/plzsang2/templates/404.html
@@ -78,7 +78,7 @@
 									<i class="fa fa-search form-control-feedback"></i>
 								</div>
 							</form>
-							<a href="index.html" class="btn-light-bg">Back To Home Page</a>
+							<a href="index.html" class="btn-light-bg">홈페이지로 돌아가기</a>
 						</div>
 					</div><!--- END COL -->
 				</div><!--- END ROW -->
@@ -100,15 +100,15 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="single_address">
 							<img src="/static/img/phone-receiver.png" alt="" />
-							<h4>Telephone</h4>
+							<h4>전화</h4>
 							<p>(+82) 02 123 1234</p>
 						</div>
 					</div><!-- END COL -->
 					<div class="col-xs-12 col-sm-4">
 						<div class="single_address">
 							<img src="/static/img/mailing.png" alt="" />
-							<h4>Send email</h4>
-							<p>Info@example.com</p>
+							<h4>이메일</h4>
+							<p>zxzxzxzxz803@example.com</p>
 						</div>
 					</div><!-- END COL -->
 				</div><!-- END ROW -->						
