--- a/code/plzsang2/templates/contact.html
+++ b/code/plzsang2/templates/contact.html
@@ -205,7 +205,7 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="media-body text-left">
-                            <h2 class="media-heading">Call us on</h2>
+                            <h2 class="media-heading">전화하세요</h2>
                             <p>(+82) 031 123 1234 <br>(+82) 031 123 1234</p>
                         </div>
                     </div>
@@ -216,8 +216,8 @@
                             <i class="fa fa-envelope"></i>
                         </div>
                         <div class="media-body text-left">
-                            <h2 class="media-heading">Send your message</h2>
-                            <p>info@example.com<br>admin@example.com</p>
+                            <h2 class="media-heading">보내시고 싶은 메시지가 있으신가요?</h2>
+                            <p>zxzxzxzxz803@naver.com<br>admin@naver.com</p>
                         </div>
                     </div>
                 </div>
