--- a/code/plzsang2/templates/footer.html
+++ b/code/plzsang2/templates/footer.html
@@ -3,7 +3,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-6">
 						<div class="single_footer">
-							<h4>About</h4>
+							<h4>우리에 대해서</h4>
 							<a href="index.html"><img src="/static/img/logo2.png" alt="logo"></a>
 							<p>Teacher Brand Analysis</p>
 						</div>
@@ -12,10 +12,10 @@
 						<div class="single_footer">
 							<h4>service provided</h4>
 							<ul class="link_mright">
-								<li><a href={{ url_for('index') }}>Home</a></li>
-								<li><a href={{ url_for('about') }}>About</a></li>
-								<li><a href={{ url_for('project_one') }}>Analysis</a></li>
-								<li><a href={{ url_for('contact') }}>Contact us</a></li>
+								<li><a href={{ url_for('index') }}>홈</a></li>
+								<li><a href={{ url_for('about') }}>이 서비스는 무엇인가요?</a></li>
+								<li><a href={{ url_for('project_one') }}>분석 서비스</a></li>
+								<li><a href={{ url_for('contact') }}>연락하세요.</a></li>
 							</ul>
 {#							<ul>#}
 {#								<li><a href="#">seo service</a></li>#}
@@ -36,11 +36,11 @@
 					<div class="col-md-6">
 						<div class="footer_links">
 							<ul>
-								<li><a href={{ url_for('about') }}>About Us</a></li>
-								<li><a href={{ url_for('project_one') }}>Product Details</a></li>
-								<li><a href="#">Privacy policy</a></li>
-								<li><a href="#">User Agreement</a></li>
-								<li><a href={{ url_for('contact') }}>Contact</a></li>
+								<li><a href={{ url_for('about') }}>우리는 누구?</a></li>
+								<li><a href={{ url_for('project_one') }}>서비스 상세사항</a></li>
+								<li><a href="#">개인정보관리방침</a></li>
+								<li><a href="#">사용자 동의사항</a></li>
+								<li><a href={{ url_for('contact') }}>연락하세요.</a></li>
 							</ul>
 						</div><!--- END FOOTER LINKS -->
 					</div><!--- END COL -->
