--- a/code/plzsang2/templates/index.html
+++ b/code/plzsang2/templates/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/static/css/magnific-popup.css">
     <!-- Style CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/video.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -49,6 +50,10 @@
 <!-- START HOME -->
 <section id="home" class="welcome-area"
          style="background-image: url(/static/img/bg/student-849825_1920.jpg);  background-size:cover; background-position: center center;">
+    <div class="video-container">
+    <div class="jetpack-video-wrapper"><span class="embed-youtube" style="text-align:center; display: block;"><iframe class="youtube-player" type="text/html" src="https://www.youtube.com/embed/dFVxGRekRSg?version=3&rel=1&fs=1&autohide=2&showsearch=0&showinfo=1&iv_load_policy=1&wmode=transparent" allowfullscreen="true" style="border: 0px; display: block; margin: 0px; width: 560px; height: 315px;" data-ratio="0.5625" data-width="560" data-height="315"></iframe></span></div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -61,6 +66,7 @@
             </div>
         </div>
     </div>
+
 </section>
 <!-- END  HOME DESIGN -->
 
@@ -723,15 +729,15 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="single_address">
                     <img src="/static/img/phone-receiver.png" alt=""/>
-                    <h4>Telephone</h4>
+                    <h4>전화</h4>
                     <p>(+82) 02 123 1234</p>
                 </div>
             </div><!-- END COL -->
             <div class="col-xs-12 col-sm-4">
                 <div class="single_address">
                     <img src="/static/img/mailing.png" alt=""/>
-                    <h4>Send email</h4>
-                    <p>Info@example.com</p>
+                    <h4>이메일</h4>
+                    <p>zxzxzxzxz803@naver.com</p>
                 </div>
             </div><!-- END COL -->
         </div><!-- END ROW -->
