--- a/code/plzsang2/templates/teacher_details.html
+++ b/code/plzsang2/templates/teacher_details.html
@@ -8,7 +8,8 @@
     <title>Teacher details</title>
     {{ js_resources|indent(4)|safe }}
     {{ css_resources|indent(4)|safe }}
-    {{ plot_script|indent(4)|safe }}
+    {{ script|indent(4)|safe }}
+    {{ script2|indent(4)|safe }}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -93,25 +94,25 @@
                 <div class="single_project_details">
                     <h3>Teacher Explain</h3>
                     <br class="row">
-                        <dt class="col-sm-3">선생님 이름</dt>
-                        <dd class="col-sm-9">한석원</dd>
-                        <br>
-                        <dt class="col-sm-3">학력</dt>
-                        <dd class="col-sm-9">
-                            <p>서울대 졸업</p>
-                        </dd>
-                        <br>
-                        <dt class="col-sm-3">약력</dt>
-                        <dd class="col-sm-9">
-                            <p>(현) 깊은생각 한석원 수학학원 원장 </p>
-                            <p>(현) 대성마이맥 수학영역 대표강사</p>
-                        </dd>
-                        <br></br>
-                        <dt class="col-sm-3">저서</dt>
-                        <dd class="col-sm-9">
-                            <p>지금은, 공부가 너의 전부다</p>
-                        </dd>
-                        <br>
+                    <dt class="col-sm-3">선생님 이름</dt>
+                    <dd class="col-sm-9">한석원</dd>
+                    <br>
+                    <dt class="col-sm-3">학력</dt>
+                    <dd class="col-sm-9">
+                        <p>서울대 졸업</p>
+                    </dd>
+                    <br>
+                    <dt class="col-sm-3">약력</dt>
+                    <dd class="col-sm-9">
+                        <p>(현) 깊은생각 한석원 수학학원 원장 </p>
+                        <p>(현) 대성마이맥 수학영역 대표강사</p>
+                    </dd>
+                    <br></br>
+                    <dt class="col-sm-3">저서</dt>
+                    <dd class="col-sm-9">
+                        <p>지금은, 공부가 너의 전부다</p>
+                    </dd>
+                    <br>
                     </dl>
                 </div>
             </div><!-- END COL -->
@@ -119,12 +120,22 @@
         <div class="row project_details_bg">
             <div class="col-md-11">
                 <div class="single_project_details">
-                    <h3>Graph</h3>
+                    <h3>선생님에 대한 댓글이 얼마나 있었나요?</h3>
+                    <p>댓글 수</p>
+                    {{ div1|safe }}
+                </div>
+            </div>
+        </div>
+        <div class="row project_details_bg">
+            <div class="col-md-11">
+                <div class="single_project_details">
+                    <h3>그래프</h3>
                     <p>인기 흐름도</p>
-                    {{ plot_div|indent(4)|safe }}
+                    {{ div2|indent(4)|safe }}
                 </div>
             </div>
         </div><!-- END ROW -->
+
         <div class="row project_details_bg">
             <div class="col-md-6">
                 <div class="single_project_details_img">
@@ -172,6 +183,7 @@
                 </div>
             </div>
         </div>
+        <!--
         <div class="row">
             <div class="col-md-12">
                 <div id="testimonial-slider" class="owl-carousel">
@@ -191,8 +203,7 @@
                             <img src="/static/img/testimonial/2.jpg" alt="">
                         </div>
                         <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada vulputate nisi in
-                            fermentum. Vivamus ac libero quis nisi auctor pulvinar. Aenean sit amet lectus.
+                            한석원 선생님은 댓글 수가 점점 많아지고 있는 추세이나,
                         </p>
                         <h3 class="title">Baby naznin</h3>
                         <small class="post">- Web Designer</small>
@@ -220,9 +231,13 @@
                         <small class="post">- Web Designer</small>
                     </div>
                 </div>
-            </div><!--- END COL -->
-        </div><!--- END ROW -->
-    </div><!--- END CONTAINER -->
+            </div>
+        </div>
+
+
+        <!--- END CONTAINER -->
+    </div>
+
 </section>
 <!-- END TESTIMONIALS -->
 
@@ -240,15 +255,15 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="single_address">
                     <img src="/static/img/phone-receiver.png" alt=""/>
-                    <h4>Telephone</h4>
+                    <h4>전화</h4>
                     <p>(+82) 02 123 1234</p>
                 </div>
             </div><!-- END COL -->
             <div class="col-xs-12 col-sm-4">
                 <div class="single_address">
                     <img src="/static/img/mailing.png" alt=""/>
-                    <h4>Send email</h4>
-                    <p>Info@example.com</p>
+                    <h4>이메일</h4>
+                    <p>zxzxzxzxz803@naver.com</p>
                 </div>
             </div><!-- END COL -->
         </div><!-- END ROW -->
