--- a/code/plzsang2/templates/index.html
+++ b/code/plzsang2/templates/index.html
@@ -50,29 +50,16 @@
 <!-- END NAVBAR -->
 
 <!-- START HOME -->
-<section id="home" class="welcome-area"
-         style="background-image: url(/static/img/bg/student-849825_1920.jpg);  background-size:cover; background-position: center center;">
-    <div class="slide_banner" id="banner1">
-        <ul class="slider bg_cy">
-            <li>
-                <a href="#" target="_blank" style="background: url('aaa.png') repeat">
-                    <img src="bbb.png" alt=""/>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" style="background: url('aaa.png') repeat">
-                    <img src="bbb.png" alt=""/>
-                </a>
-            </li>
-            <li>
-                <a href="#" target="_blank" style="background: url('aaa.png') repeat">
-                    <img src="bbb.png" alt=""/>
-                </a>
-            </li>
-        </ul>
-    </div>
+<section id="home" class="welcome-area">
+    <video controls autoplay>
+        <source src="https://www.youtube.com/watch?v=do-BVWNPPwk" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
+<!-- END  HOME DESIGN -->
 
-
+<!-- START ABOUT US ONE -->
+<section id="about" class="about-us-one section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -85,43 +72,6 @@
             </div>
         </div>
     </div>
-
-</section>
-<!-- END  HOME DESIGN -->
-
-<!-- START ABOUT US ONE -->
-<section id="about" class="about-us-one section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title text-center">
-                    <h2>프로젝트에 관하여</h2>
-                    <span></span>
-                    <p>프로젝트의 목적</p>
-                </div>
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-lg-4 col-sm-4 col-xs-12 no-padding">
-                <div class="single-about-one color-about-one">
-                    <img src="/static/img/1.png" alt=""/>
-                    <h3>공공성</h3>
-                </div>
-            </div><!--- END COL -->
-            <div class="col-lg-4 col-sm-4 col-xs-12 no-padding">
-                <div class="single-about-one color-about-two">
-                    <img src="/static/img/2.png" alt=""/>
-                    <h3>지속가능성</h3>
-                </div>
-            </div><!--- END COL -->
-            <div class="col-lg-4 col-sm-4 col-xs-12 no-padding">
-                <div class="single-about-one color-about-three">
-                    <img src="/static/img/phone-receiver.png" alt=""/>
-                    <h3>활용성</h3>
-                </div>
-            </div><!--- END COL -->
-        </div><!--- END ROW -->
-    </div><!--- END CONTAINER -->
 </section>
 <!-- END ABOUT US ONE -->
 {#		#}
