--- a/code/plzsang2/templates/project_one.html
+++ b/code/plzsang2/templates/project_one.html
@@ -134,7 +134,7 @@
 						</div><!--- END COL -->
 						<div class="col-xs-12 col-sm-4 mix social">
 							<div class="box">
-								<img src="/static/img/portfolio/이지영.jpg" alt="image">
+								<img src="/static/img/portfolio/이지영.png" height="380" width="480" alt="image">
 								<div class="box-content">
 									<h3 class="title">이지영</h3>
 									<span class="post">[학력] 서울대학교 사범대학
@@ -149,7 +149,7 @@
 						</div><!--- END COL -->
 						<div class="col-xs-12 col-sm-4 mix science">
 							<div class="box">
-								<img src="/static/img/portfolio/백호.jpg" alt="image">
+								<img src="/static/img/portfolio/백호.jpeg" height="380" width="480" alt="image">
 								<div class="box-content">
 									<h3 class="title">백호</h3>
 									<span class="post">[학력] 한양대학교 졸업
