--- a/code/plzsang2/templates/navbar.html
+++ b/code/plzsang2/templates/navbar.html
@@ -1,39 +1,41 @@
 <div class="navbar navbar-default navbar-fixed-top menu-top menu_dropdown">
     <div class="container">
-        <div class="navbar-headerk">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href={{ url_for('index') }} class="navbar-brand"><img src="/static/img/logo2.png" alt="logo"></a>
+            <a href={{ url_for('index') }} class="navbar-brand" ><img src="/static/img/book.png" height="30" width="38" alt="logo">
+                <h1 style="font-weight: bold">강의를 부탁해</h1>
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">카테고리 <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">ALL</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">국어</a></li>
-                        <li><a href="#">수학</a></li>
-                        <li><a href="#">사회</a></li>
-                        <li><a href="#">과학</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <div class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="search">
-                    <div class="input-group" >
-                        <input type="text" class="form-control" placeholder="Search" name="q">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+{#            <ul class="nav navbar-nav">#}
+{#                <li class="dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">카테고리 <b class="caret"></b></a>#}
+{#                    <ul class="dropdown-menu">#}
+{#                        <li><a href="#">ALL</a></li>#}
+{#                        <li class="divider"></li>#}
+{#                        <li><a href="#">국어</a></li>#}
+{#                        <li><a href="#">수학</a></li>#}
+{#                        <li><a href="#">사회</a></li>#}
+{#                        <li><a href="#">과학</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#            </ul>#}
+{#            <div class="col-sm-3 col-md-3">#}
+{#                <form class="navbar-form" role="search">#}
+{#                    <div class="input-group" >#}
+{#                        <input type="text" class="form-control" placeholder="Search" name="q">#}
+{#                        <div class="input-group-btn">#}
+{#                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>#}
+{#                            </button>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </form>#}
+{#            </div>#}
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a>
